--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 <h1 class="text-center"> {{ title }} </h1>
 
 <div class="container">
-    <app-employee-list></app-employee-list>
+    <!-- load components based on the url path -->
+    <router-outlet></router-outlet>
 </div>
