--- a/angular-frontend/src/app/employee-list/employee-list.component.html
+++ b/angular-frontend/src/app/employee-list/employee-list.component.html
@@ -17,6 +17,7 @@
             <td>
                 <button (click)="updateEmployee(employee.id)" class="btn btn-info">Update</button>
                 <button (click)="deleteEmployee(employee.id)" class="btn btn-danger" id="delete-button">Delete</button>
+                <button (click)="showDetailsEmployee(employee.id)" class="btn btn-warning">Details</button>
             </td>
         </tr>
     </tbody>
